[gd_scene load_steps=5 format=3 uid="uid://cuqniiohe2b05"]

[ext_resource type="Script" path="res://addons/RadialMenu/Demo/RadialDemo3.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://iopwhmejcr8b" path="res://addons/RadialMenu/RadialMenu.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://cw3acqv2fdu0g" path="res://addons/RadialMenu/Demo/Rock_02_CGBookcase.jpg" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.113725, 0.113725, 0.113725, 1)

[node name="RadialMenuDemo3" type="PanelContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")
script = ExtResource("2")

[node name="Background" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftThrid" type="ColorRect" parent="Background"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MiddleThird" type="ColorRect" parent="Background"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.164706, 0.164706, 0.164706, 1)

[node name="RightThird" type="ColorRect" parent="Background"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Background/RightThird"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 2

[node name="Instructions" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
text = "Click anywhere with the right mouse button 
to open the radial menu."

[node name="MenuResult" type="Label" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Nothing selected yet."
max_lines_visible = 1

[node name="Node" type="Node" parent="."]

[node name="RadialMenu" parent="Node" instance=ExtResource("3")]
visible = false
custom_minimum_size = Vector2(270, 176.743)
offset_right = 270.0
offset_bottom = 176.743
pivot_offset = Vector2(135, 135)
radius = 135
center_radius = 21
circle_coverage = 0.6
center_angle = -1.571
animation_speed_factor = 0.12
icon_scale = 0.6

[connection signal="item_selected" from="Node/RadialMenu" to="." method="_on_ArcPopupMenu_item_selected"]
